# Wox.Plugin.eDict

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  build.sh  dependabot.yml  main.py  plugin.json  pyproject.toml  requirements.txt  spell.py  tox.ini  wox.py
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml  python-app.yml
lib/: CHANGES.txt  MANIFEST.in  PKG-INFO  README.md  setup.py
lib/src/pyperclip/: __init__.py
tests/: test_integration.py
tests/__snapshots__/: test_integration.ambr
